--- a/index.html
+++ b/index.html
@@ -617,18 +617,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#">Home</a>
+            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#"
+            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/"
               aria-expanded="false">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="#">Gallery</a>
+            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/">Gallery</a>
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwiFhNPpqfuCAxVaxTgGHT2pAH8QFnoECD0QAQ&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FPawan_Kalyan&usg=AOvVaw36pBq1chsdqx8fwVG2Jyh9&opi=89978449">WikiPedia</a>
+          <a class="btn btn-primary display-4" href="https://rahulpspk.me/priyanka/">💗Priyanka Mohan💗</a>
         </div>
       </div>
     </div>
@@ -699,13 +699,21 @@
   <div class="container-fluid">
     <div class="row">
       <div class="content-wrap col-12 col-md-10">
-        <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
-          <strong></strong>
-        </h1>
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7"></p>
-        <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="https://rahulpspk.me/priyanka/">💗Click for Priyanka💗</a>
-        </div>
+<style>
+  .custom-opacity {
+    opacity: 0.3;
+  }
+</style>
+
+<h1 class="mbr-section-title mbr-fonts-style text-white mb-4 display-1 custom-opacity">
+  <strong>PAWAN&nbsp&nbspKALYAN</strong>
+</h1>
+
+     <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7" style="opacity: 0.5;">
+  <b>Pawanism: Igniting hearts, inspiring minds, and shaping a legacy of unwavering determination.</b>
+</p>
+
+       
       </div>
     </div>
   </div>
