--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/png-transparent-left-fist-logo-india-person-lorem-ipsum-political-party-jana-sena-party-india-thumbnail.png" type="image/x-icon">
   <meta name="description" content="This web page showcases the latest in web design with stunning visuals and engaging content.">
 
-  <title>Poer Star</title>
+  <title>Power Star</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
