--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
       <div class="card col-md-12 col-lg-10">
         <div class="card-wrapper">
           <div class="image-wrapper d-flex justify-content-center mb-4">
-            <img src="assets1/images/peakpx (2).jpg">
+            <img src="assets1/images/aaa.jpg">
           </div>
           <div class="card-content-text">
             <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-2">
