--- a/index.html
+++ b/index.html
@@ -702,17 +702,17 @@
       <div class="content-wrap col-12 col-md-10">
 <style>
   .custom-opacity {
-    opacity: 0.3;
+    opacity: 0.5;
   }
 </style>
-
+<a href = "https://www.instagram.com/pawankalyan/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">
 <h1 class="mbr-section-title mbr-fonts-style text-white mb-4 display-1 custom-opacity">
   <strong>PAWAN&nbsp&nbspKALYAN</strong>
-</h1>
-
+</h1></a>
+<a href = "https://www.instagram.com/pawankalyan/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
      <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7" style="opacity: 0.5;">
   <b>Pawanism: Igniting hearts, inspiring minds, and shaping a legacy of unwavering determination.</b>
-</p>
+</p></a>
 
        
       </div>
