--- a/index.html
+++ b/index.html
@@ -621,11 +621,7 @@
             <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/"
-              aria-expanded="false">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/">Gallery</a>
+            <a class="nav-link link text-black display-4" href="git.html">GIT & GITHUB</a>
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
