--- a/git.html
+++ b/git.html
@@ -660,8 +660,8 @@
         <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-4 display-1">
           <strong>CODE GENIE</strong>
         </h1>
-        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Experience the Future of Creativity and Innovation</p>
-<p class="mbr-fonts-style mbr-text mbr-red mb-4 display-7">Scroll Down 🔻</p>
+        <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7"><h>Experience the Future of Creativity and Innovation</h></p>
+<p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Scroll Down 🔻</p>
         <div class="mbr-section-btn">
           <a class="btn btn-white-outline display-7" href="https://youtu.be/KbGpFVIWlBs">Visit Now</a>
         </div>
