--- a/git.html
+++ b/git.html
@@ -663,7 +663,7 @@
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7"><h>Experience the Future of Creativity and Innovation</h></p>
 <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Scroll Down 🔻</p>
         <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="https://youtu.be/KbGpFVIWlBs">Visit Now</a>
+          <a class="btn btn-white-outline display-7" href="index.html">Home Page</a>
         </div>
       </div>
     </div>
