--- a/index.html
+++ b/index.html
@@ -618,14 +618,14 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/">Home</a>
+            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/" target="_blank">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="git.html">GIT & GITHUB</a>
+            <a class="nav-link link text-black display-4" href="git.html" target="_blank">GIT & GITHUB</a>
           </li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="priya.html">💗Priyanka Mohan💗</a>
+          <a class="btn btn-primary display-4" href="priya.html" target="_blank">💗Priyanka Mohan💗</a>
         </div>
       </div>
     </div><!--meeku em pani andi ikkada-->
@@ -701,11 +701,11 @@
     opacity: 0.5;
   }
 </style>
-<a href = "https://www.instagram.com/pawankalyan/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">
+<a href = "https://www.instagram.com/pawankalyan/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank">
 <h1 class="mbr-section-title mbr-fonts-style text-white mb-4 display-1 custom-opacity">
   <strong>PAWAN&nbsp&nbspKALYAN</strong>
 </h1></a>
-<a href = "https://www.instagram.com/pawankalyan/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+<a href = "https://www.instagram.com/pawankalyan/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"
      <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7" style="opacity: 0.5;">
   <b>Pawanism: Igniting hearts, inspiring minds, and shaping a legacy of unwavering determination.</b>
 </p></a>
