--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="https://www.instagram.com/__rahul_anagani/" target="_blank">Home</a>
+            <a class="nav-link link text-black display-4" href="https://www.instagram.com/rahulanagani/" target="_blank">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link link text-black display-4" href="git.html" target="_blank">GIT & GITHUB</a>
