--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-
+<div id="pspk" ></div>
     <style>
 .cid-tXG1xKjLZA  {
   z-index: 1000;
@@ -618,11 +618,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
           <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="https://www.instagram.com/rahulanagani/" target="_blank">Home</a>
+            <a class="nav-link link text-black display-4" href="#pspk" target="_blank">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link link text-black display-4" href="git.html" target="_blank">GIT & GITHUB</a>
-          </li>
+	<li class="nav-item">
+		<a class="nav-link link text-black display-4" href="#rahul">About</a>
+	</li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
           <a class="btn btn-primary display-4" href="priya.html" target="_blank">💗Priyanka Mohan💗</a>
@@ -776,7 +776,7 @@
           </h3>
           <div class="row card-box align-left">
             <div class="item features-without-image col-12">
-              <div class="item-wrapper">
+              <div class="item-wrapper" id="rahul">
                 <p class="mbr-text mbr-fonts-style display-7">Pawan Kalyan, born Konidela Kalyan Babu on September 2, 1971, is a multifaceted Indian actor, politician, and social activist.</p>
               </div>
             </div>
