--- a/index.html
+++ b/index.html
@@ -777,12 +777,15 @@
           <div class="row card-box align-left">
             <div class="item features-without-image col-12">
               <div class="item-wrapper" id="rahul">
-                <p class="mbr-text mbr-fonts-style display-7">Pawan Kalyan, born Konidela Kalyan Babu on September 2, 1971, is a multifaceted Indian actor, politician, and social activist.</p>
+                <p class="mbr-text mbr-fonts-style display-7">Pawan Kalyan, born Konidala Kalyan Babu on September 2, 1971, is a multifaceted Indian actor, politician, and social activist.</p>
               </div>
             </div>
             <div class="item features-without-image col-12">
               <div class="item-wrapper">
                 <p class="mbr-text mbr-fonts-style display-7">Fondly referred to as the "Power Star" by his ardent fan base, Pawan Kalyan has not only left an indelible mark on the entertainment industry but has also ventured into the realm of politics to champion the causes close to his heart.</p>
+              </div>
+	     <div class="item-wrapper">
+                <p class="mbr-text mbr-fonts-style display-7">He is an Indian politician, actor and philanthropist, serving as the 10th Deputy Chief Minister of Andhra Pradesh since June 2024. He is also the Minister of Panchayat Raj, Rural Development & Rural Water Supply; Environment, Forests, Science & Technology in the Government of Andhra Pradesh and an MLA representing the Pitapuram constituency. He is the founder and president of the Janasena Party.</p>
               </div>
             </div>
             <div class="item features-without-image col-12">
