--- a/index.html
+++ b/index.html
@@ -817,5 +817,6 @@
     })();
 
   </script>
+ <footer> <small>&copy; Copyright 2024, PITHAPURAM MLA GAARI THALUKA !</small> </footer> 
 </body>
 </html>
