--- a/priya.html
+++ b/priya.html
@@ -23,7 +23,11 @@
   <link rel="preload" as="style" href="assets/mobirise/css/additional.css"><link rel="stylesheet" href="assets/mobirise/css/additional.css" type="text/css">
   
   <!--meeku em pani andi ikkada-->
-
+  <style>
+    *{
+    cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/heart.svg), auto;
+    }
+  </style>
   <style>:root{ --background: #FCE8ED; --dominant-color: #E01A4F; --primary-color: #F15946; --secondary-color: #53B3CB; --success-color: #2CD888; --danger-color: #DA2A3B; --warning-color: #FFC105; --info-color: #12CDF2; --background-text: #000000; --dominant-text: #FFFFFF; --primary-text: #FFFFFF; --secondary-text: #000000; --success-text: #000000; --danger-text: #FFFFFF; --warning-text: #000000; --info-text: #000000;}</style>
 </head>
 <body>
@@ -623,6 +627,9 @@
           <li class="nav-item">
             <a class="nav-link link text-black display-4" href="#gallery-5-tXhhkVdCOI"
               aria-expanded="false">Gallery</a>
+              <select>
+                
+              </select>
           </li>
           <li class="nav-item">
             <a class="nav-link link text-black display-4" href="#about-me-9-tXhhkVdW0Q">About</a>
