--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
   <link rel="preload" as="style" href="assets1/mobirise/css/additional.css"><link rel="stylesheet" href="assets1/mobirise/css/additional.css" type="text/css">
   
   <!--meeku em pani andi ikkada-->
-
+  <style>
+    *{
+    cursor: url(power.svg), auto !important;
+    }
+  </style>
   <style>:root{ --background: #F9E7E9; --dominant-color: #C1121F; --primary-color: #669BBC; --secondary-color: #355975; --success-color: #25CA7D; --danger-color: #CC2333; --warning-color: #EFB300; --info-color: #0CBFE3; --background-text: #000000; --dominant-text: #FFFFFF; --primary-text: #000000; --secondary-text: #FFFFFF; --success-text: #000000; --danger-text: #FFFFFF; --warning-text: #000000; --info-text: #000000;}</style>
 </head>
 <body>
