--- a/priya.html
+++ b/priya.html
@@ -25,7 +25,7 @@
   <!--meeku em pani andi ikkada-->
   <style>
     *{
-    cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/heart.svg), auto;
+    cursor: url(rahul.svg), auto !important;
     }
   </style>
   <style>:root{ --background: #FCE8ED; --dominant-color: #E01A4F; --primary-color: #F15946; --secondary-color: #53B3CB; --success-color: #2CD888; --danger-color: #DA2A3B; --warning-color: #FFC105; --info-color: #12CDF2; --background-text: #000000; --dominant-text: #FFFFFF; --primary-text: #FFFFFF; --secondary-text: #000000; --success-text: #000000; --danger-text: #FFFFFF; --warning-text: #000000; --info-text: #000000;}</style>
